---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "const k k := 3"
---
"k"@"src/main.t:6..7" [ConstVar(Const, No)]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:10..12: cannot assign into `k`
| error for src/main.t:8..9: `k` is a reference to a constant, not a variable
| note for src/main.t:6..7: `k` declared here
